syntax = "proto3";

option csharp_namespace = "ProductGrpcService";

package ProductPackage;

service ProductService {
	rpc GetProduct (ProductIdentity) returns (ProductFull);
	rpc CreateProduct(ProductFull) returns (ProductIdentity);
}

message ProductIdentity {
	int32 id = 1;
}

message ProductFull {
	int32 id = 1;
	string name = 2;
}